--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -14,6 +14,18 @@
   justify-content: center;
 }
 
+.check {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.color {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .h1 {
   display: flex;
   align-items: center;
